Set default to show all models and add mobile-responsive design with horizontal scrolling

--- a/public/index.html
+++ b/public/index.html
@@ -52,9 +52,9 @@
                         <select id="limitSelect" class="control-input">
                             <option value="25">25 models</option>
                             <option value="50">50 models</option>
-                            <option value="100" selected>100 models</option>
+                            <option value="100">100 models</option>
                             <option value="200">200 models</option>
-                            <option value="1000">All models</option>
+                            <option value="1000" selected>All models</option>
                         </select>
                     </div>
 
