--- a/public/index.html
+++ b/public/index.html
@@ -22,13 +22,13 @@
         <meta name="keywords" content="AI models, Chutes AI, VLLM, ComfyUI, TGI, AI model explorer, AI pricing, text generation, image generation, video generation, audio AI, machine learning models, LLM comparison" />
         <meta name="author" content="wuu73.org" />
         <meta name="robots" content="index, follow" />
-        <link rel="canonical" href="https://wuu73.org/chutes-models-enhanced/" />
+        <link rel="canonical" href="https://extra.wuu73.org/chu/" />
 
         <!-- Open Graph / Facebook -->
         <meta property="og:type" content="website" />
-        <meta property="og:url" content="https://wuu73.org/chutes-models-enhanced/" />
+        <meta property="og:url" content="https://extra.wuu73.org/chu/" />
         <meta property="og:title" content="Chutes AI Model Explorer - Enhanced | Browse All AI Models" />
-        <meta property="og:description" content="Explore and compare ALL AI models including text, image, video, and audio generation. View pricing, performance metrics, and real-time availability." />
+        <meta property="og:description" content="Explore and compare ALL AI models including text, image, video, and audio generation. View pricing, performance metrics, context window size in tokens, and real-time availability." />
         <meta property="og:image" content="https://wuu73.org/chutes-models-enhanced/og-image.png" />
         <meta property="og:image:width" content="1200" />
         <meta property="og:image:height" content="630" />
